<resources>
    <string name="app_name">CarDataBaseApp</string>
    <string name="model">TYPE MODEL HERE</string>
    <string name="year">TYPE YEAR HERE</string>
    <string name="color">TYPE COLOR HERE</string>
    <string name="add">ADD</string>
    <string name="enter_sort_by">Sort by</string>
    <string name="sortList">sort_list</string>
    <string name="data_source">DataSource</string>
</resources>