<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    android:background="?colorPrimary">

    <EditText
        android:id="@+id/modelEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightEditText"
        android:layout_marginBottom="36dp"
        android:hint="@string/model"
        android:textColor="@color/black"
        android:imeOptions="actionNext"
        android:inputType="textCapCharacters"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/yearEditText" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightEditText"
        android:layout_marginBottom="36dp"
        android:hint="@string/year"
        android:textColor="@color/black"
        android:imeOptions="actionNext"
        android:inputType="textCapCharacters"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/colorEditText" />

    <EditText
        android:id="@+id/colorEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightEditText"
        android:layout_marginTop="36dp"
        android:hint="@string/color"
        android:textColor="@color/black"
        android:imeOptions="actionDone"
        android:inputType="textCapCharacters"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="36dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>